ui/src/index.scss
@keyframes fadein {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.tag {
  user-select: none;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.2s, opacity 0.2s linear;
}

.has-pointer {
  cursor: pointer;
}

.has-no-bottom-padding {
  padding-bottom: 0;
}

.has-bottom-padding {
  padding-bottom: 1.5rem;
}

.main-section {
  padding: 2rem 1.5rem;
}

.notification {
  &.flash-notification {
    border-radius: 0;
  }
}

.tabs.topnav-tabs {
  margin-bottom: 0;
}

.omni-bar {
  display: flex;
  flex-flow: row nowrap;
  justify-content: flex-start;
  background-color: white;
  color: #363636;
  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
  max-width: 100%;
  width: 100%;
  height: 2.25em;
  line-height: 1.5;
  font-size: 1.25rem;
  padding-bottom: calc(0.375em - 1px);
  padding-left: calc(0.625em - 1px);
  padding-right: calc(0.625em - 1px);
  padding-top: calc(0.375em - 1px);
  border: 1px solid #dbdbdb;
  border-radius: 4px;
  margin-bottom: 1.5rem;

  &:hover {
    border-color: #b5b5b5;
  }

  &:focus-within {
    border: 1px solid rgb(146, 178, 235);
    box-shadow: inset 0 1px 2px -webkit-focus-ring-color;
  }

  input {
    border: none;
    background-image: none;
    background-color: transparent;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    height: 100%;
    font-size: inherit;
    color: inherit;

    &:focus {
      outline: 0;
    }

    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    padding-left: 0.8em;
    padding-right: 0.8em;
  }
}

.items-list {
  margin-bottom: 1.5rem;
}

.item-box {
  margin-bottom: 1rem !important;
  padding: 0;
  position: relative;

  img {
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
  }

  .level > .item-actions {
    margin-right: 20px;
  }

  &:hover, &.is-focused {
    box-shadow: 0 2px 3px rgba(146, 178, 235, 0.8), 0 0 0 1px rgba(146, 178, 235, 0.8);

    .level > .item-actions, .show-on-hover {
      visibility: visible;
      opacity: 1;
      transition: opacity 0.2s linear;
    }
  }

  .item-name {
    a {
      font-size: 1.15rem;
    }
  }

  @media (max-width: 500px) {
    .item-name {
      width: 180px;
      justify-content: flex-start;

      a {
        font-size: 0.9rem;
      }
    }

    .item-year {
      margin-left: auto;
    }
  }

  @media (max-width: 360px) {
    .item-name {
      width: 120px;
      justify-content: flex-start;
    }
  }
}

.image {
  .scraper-result-image {
    width: 64px;
    height: 64px;
    object-fit: cover;
  }
}

.level-left,
.level-right {
  &.is-mobile {
    display: flex;
    margin-top: 0;
    &>.level-item {
      &:not(:last-child) {
        margin-bottom: 0;
      }
      &:not(.is-narrow) {
        flex-grow: 1;
      }
    }
  }
}

.modal {
  animation: fadein 200ms;
}

.item-details-modal {
  .modal-card-head {
    min-height: 58px;

    .header-actions {
      margin-left: auto;
    }

    .edit-item-pencil {
      cursor: pointer;
      margin-left: 20px;
    }

    .external-item-links {
      a:not(:last-child) {
        margin-right: 20px;
      }
    }

    &:hover {
      .external-item-links, .edit-item-pencil {
        visibility: visible;
        opacity: 1;
        transition: opacity 0.2s linear;
      }
    }

    .modal-card-title {
      max-width: 75vw;
      flex-grow: 0;
    }
  }

  .modal-card-head, .modal-card-foot {
    padding-top: 10px;
    padding-bottom: 10px;
  }

  .modal-card-foot {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-areas: "actions-left actions-right";

    .actions-left {
      display: flex;
      justify-content: flex-start;
      grid-area: actions-left;
    }

    .actions-right {
      display: flex;
      justify-content: flex-end;
      grid-area: actions-right;
    }
  }

  .image-content {
    &:hover .item-rating {
      visibility: visible;
      opacity: 1;
      transition: opacity 0.2s linear;
    }
  }

  .tags {
    margin-bottom: 0.5rem;
  }

  @media (max-width: 500px) {
    justify-content: start;
  }

  .modal-card {
    width: 95vw;
    max-width: 1200px;

    @media (max-width: 500px) {
      // Use as much vertical height as possible on mobile, but ensure that the
      // modal footer does not take up the bottom 44px of the screen to avoid
      // accidental iPhone fullscreen toolbar triggering.
      height: 88vh !important;
      max-height: 88vh !important;
      width: 100vw;

     .modal-card-head, .modal-card-foot {
        border-radius: 0px;
      }
    }
  }

  .modal-card-body {
    display: grid;
    grid-template-columns: 25% auto;
    grid-gap: 1em;
    grid-template-areas: "image fields";
    height: 100%;

    .item-description {
      white-space: pre-wrap;
      border-radius: 4px;
    }

    @media (max-width: 500px) {
      grid-template-columns: 1fr;
      grid-template-areas:
        "image"
        "fields";
    }

    @media (min-width: 501px) {
      .fields {
        max-height: 62vh;
        overflow-y: scroll;
        overflow-x: hidden;
        // border-radius: 4px;
      }
    }
  }
}

.note-boxes {
  .note-box {
    margin-bottom: 1rem;

    &:hover {
      .node-delete-button {
        visibility: visible;
        opacity: 1;
        transition: opacity 0.2s linear;
      }
    }

    .note-header {
      display: flex;
      flex-flow: row nowrap;
      border-bottom: 1px dotted #dbdbdb;
      margin-bottom: 5px;
      font-weight: 500;

      .node-delete-button {
        margin-top: -5px;
        margin-left: auto;
      }
    }
  }
}

